--- a/styles.css
+++ b/styles.css
@@ -60,12 +60,13 @@ a {
 }
 
 .hero {
-  min-height: 100vh;
+  min-height: 75vh;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 0 1.5rem;
   background: radial-gradient(circle at top left, #23395d, #05060a 55%);
+   padding-top: 1rem;
 }
 
 .hero-content {
@@ -104,7 +105,7 @@ a {
 }
 
 main {
-  margin-top: 4.5rem; /* header height */
+  margin-top: 2.5rem; /* header height */
 }
 
 .section {
